--- a/src/_global-css/modules/scaffolding.css
+++ b/src/_global-css/modules/scaffolding.css
@@ -12,6 +12,14 @@
 .inner-container-padding {
     padding: 26px 30px 30px;
 }
+.col-1,
+.col-2 {
+    padding-bottom: 20px;
+}
+.col-1 p,
+.col-2 p {
+    margin: 0;
+}
 .block {
     display: block;
 }
@@ -31,7 +39,6 @@
         width: auto !important;
         max-width: 100% !important;
     }
-
 }
 ol {
     padding: 13px 0 5px 15px;
